style: revert quick theme toggle and fix custom collapse panel visibility conflict with Tailwind css collapse utility

--- a/src/index.css
+++ b/src/index.css
@@ -472,6 +472,7 @@ body {
 
 /* Collapse Panel Accordion */
 .collapse {
+  visibility: visible !important;
   display: block;
   overflow: hidden;
   border-radius: 0.75rem;
